WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158031
Map should not be in JSGlobalObject's static hashtable because it's initialized eagerly via FOR_EACH_SIMPLE_BUILTIN_TYPE_WITH_CONSTRUCTOR
https://bugs.webkit.org/show_bug.cgi?id=158031
Summary
Map should not be in JSGlobalObject's static hashtable because it's initializ...
Filip Pizlo
Reported
2016-05-24 11:26:10 PDT
Patch forthcoming.
Attachments
the patch
(3.48 KB, patch)
2016-05-24 11:28 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-05-24 11:28:19 PDT
Created
attachment 279677
[details]
the patch
Geoffrey Garen
Comment 2
2016-05-24 11:43:24 PDT
Comment on
attachment 279677
[details]
the patch r=me
Mark Lam
Comment 3
2016-05-24 11:46:05 PDT
Comment on
attachment 279677
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279677&action=review
> Source/JavaScriptCore/tests/stress/override-map-constructor.js:1 > +function Map() {
Please add a comment above this that says "Should not crash". This gives us a clue to what was expected of this test since it is very bare.
Filip Pizlo
Comment 4
2016-05-24 12:00:57 PDT
Landed in
http://trac.webkit.org/changeset/201340
Filip Pizlo
Comment 5
2016-05-24 12:01:24 PDT
(In reply to
comment #3
)
> Comment on
attachment 279677
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=279677&action=review
> > > Source/JavaScriptCore/tests/stress/override-map-constructor.js:1 > > +function Map() { > > Please add a comment above this that says "Should not crash". This gives us > a clue to what was expected of this test since it is very bare.
Ooops, I landed before seeing this comment. I will fix in a follow-up.
Filip Pizlo
Comment 6
2016-05-24 12:03:46 PDT
(In reply to
comment #5
)
> (In reply to
comment #3
) > > Comment on
attachment 279677
[details]
> > the patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=279677&action=review
> > > > > Source/JavaScriptCore/tests/stress/override-map-constructor.js:1 > > > +function Map() { > > > > Please add a comment above this that says "Should not crash". This gives us > > a clue to what was expected of this test since it is very bare. > > Ooops, I landed before seeing this comment. I will fix in a follow-up.
Addressed in
http://trac.webkit.org/changeset/201342
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug